creacion de animaciones y ajuste de detalles con bootstrap

--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -17,7 +17,7 @@
 
 
 
-    <nav class="navbar navbar-dark navbar-expand-lg bg-success">
+    <nav class="navbar navbar-dark navbar-expand-lg box-animado-1">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Logo</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,8 +39,8 @@
                   Más
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Nuestros Clientes</a></li>
-                  <li><a class="dropdown-item" href="#">Contacto</a></li>
+                  <li><a class="dropdown-item" href="./nuestros-clientes.html">Nuestros Clientes</a></li>
+                  <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
                   <li><a class="dropdown-item" href="#">Redes Sociales</a></li>
                 </ul>
               </li>
@@ -50,6 +50,10 @@
       </nav>
 
 
+      <img src="../assets/carpintero.jpg" class="img-fluid" alt="carpintero"> 
+
+<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos earum cum blanditiis, ducimus eaque fuga ab molestias aut totam quisquam?</p>
+
 
 
 
@@ -57,15 +61,13 @@
 
 
  
-      <footer>
-        <div class="flex-footer">
-            <div class="flex-item-footer">carpinterialc@carpinterialc.cl +56912345678</div>  
-            
 
-            <div class="flex-item-footer">Avenida dos #1234 Comuna de Puente Alto</div>
-           
-        </div>
-    </footer> 
+<footer>
+    <div class="flex-footer">
+        <div class="flex-item-footer">Avenida dos #1234 Comuna de Puente Alto +56912345678 </div>  
+    </div>
+</footer> 
+
 
 
 
