--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  -->
 
     <!-- index -->
-    <nav class="navbar navbar-dark navbar-expand-lg bg-success">
+    <nav class="navbar navbar-dark navbar-expand-lg box-animado-1">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Logo</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,9 @@
             </ul>
           </div>
         </div>
-      </nav>
+      </nav> 
+
+      <section class="box-animado-1"></section>
 
 
 
@@ -95,11 +97,7 @@
 
     <footer>
         <div class="flex-footer">
-            <div class="flex-item-footer">carpinterialc@carpinterialc.cl +56912345678</div>  
-            
-
-            <div class="flex-item-footer">Avenida dos #1234 Comuna de Puente Alto</div>
-           
+            <div class="flex-item-footer">Avenida dos #1234 Comuna de Puente Alto +56912345678 </div>  
         </div>
     </footer> 
 
