--- a/Pages/nuestros-clientes.html
+++ b/Pages/nuestros-clientes.html
@@ -85,11 +85,11 @@
 
 
 
-
         <footer>
-            <div class="flex-footer">
-                <div class="flex-item-footer">Avenida dos #1234 Comuna de Puente Alto +56912345678 </div>  
-            </div>
+          <div class="grid text-center">
+            <div class="g-col-6">Avenida dos #1234, Comuna de Puente Alto</div>
+            <div class="g-col-6">+569 12345678 - carpinterialc@carpinterialc.cl</div>
+          </div>
         </footer> 
     
     
