trabajamos con transiciones

--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -49,31 +49,31 @@
 
 
 
-              <form class="row g-3"> 
+              <form class="row g-3 gradient"> 
 
                 <div class="col-12">
-                    <label for="inputAddress" class="form-label">Nombre</label>
+                    <label for="inputAddress" class="form-label text-contact">Nombre</label>
                     <input type="text" class="form-control" id="inputAddress" placeholder="Nombre Apellido">
                 </div>
 
                 <div class="col-md-6">
-                  <label for="inputEmail4" class="form-label">Correo electrónico</label>
+                  <label for="inputEmail4" class="form-label text-contact">Correo electrónico</label>
                   <input type="email" class="form-control" id="inputEmail4">
                 </div>
 
                 <div class="col-12">
-                  <label for="inputAddress2" class="form-label">Dirección</label>
+                  <label for="inputAddress2" class="form-label text-contact">Dirección</label>
                   <input type="text" class="form-control" id="inputAddress2" placeholder="calle, avenida, pasaje #1234">
                 </div>
                 <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Escriba mensaje</label>
+                    <label for="exampleFormControlTextarea1" class="form-label text-contact">Escriba mensaje</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
 
                 <div class="col-12">
                   <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="gridCheck">
-                    <label class="form-check-label" for="gridCheck">
+                    <label class="form-check-label text-contact" for="gridCheck">
                       Deseo recibir ofertas en mi correo
                     </label>
                   </div>
@@ -94,7 +94,7 @@
 
 
 
-              <footer>
+              <footer class="footer-contact">
                 <div class="grid text-center">
                   <div class="g-col-6">Avenida dos #1234, Comuna de Puente Alto</div>
                   <div class="g-col-6">+569 12345678 - carpinterialc@carpinterialc.cl</div>
