--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -43,17 +43,12 @@
           </div>
         </div>
       </nav>
+      
 
-
-      <img src="../assets/carpintero.jpg" class="img-fluid" alt="carpintero"> 
-
-<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos earum cum blanditiis, ducimus eaque fuga ab molestias aut totam quisquam?</p>
-
-
-
-
-
-
+<div class="us">
+      <div class="us-1">Foto</div>
+      <div class="us-2">Reseña</div>
+    </div>
 
  
 
