--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -49,7 +49,7 @@
 
 
 
-              <form class="row g-3 gradient"> 
+              <form class="row g-3 gradient box-contact"> 
 
                 <div class="col-12">
                     <label for="inputAddress" class="form-label text-contact">Nombre</label>
