--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -5,22 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carpintería LC</title> 
-    <link rel="stylesheet" href="../Sass/estilo2.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="../Sass/estilo-lc.css">
   
 </head>
 <body>
 
 
 
-    <nav class="flex-container-nav">
-      <ul>
-        <li><a class="grid-1" href="../index.html">Inicio</a></li> 
-        <li><a class="grid-2" href="./nosotros.html">Nosotros</a></li>
-        <li><a class="grid-3" href="./productos-destacados.html">Productos Destacados</a></li> 
-        <li><a class="grid-4" href="./nuestros-clientes.html">Nuestros Clientes</a></li>
-        <li><a class="grid-5" href="./contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
+    <nav class="navbar navbar-dark navbar-expand-lg box-animado-1">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Logo</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./productos-destacados.html">Productos Destacados</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Más
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="./nuestros-clientes.html">Nuestros Clientes</a></li>
+                  <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
+                  <li><a class="dropdown-item" href="#">Redes Sociales</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
       
 
     <div class="us">
@@ -29,7 +52,7 @@
         contar con muebles personalizados a su medidas y de acuerdo a sus gustos. En Carpintería Lc tendrás la posibilidad de solicitar 
       un modelo que imagines y en Carpintería Lc se encargarán de fabricarlo. </p>
     
-      <div class="us-3"><a href="https://www.instagram.com/carpintero_lc/" target="_blank"><img class="rrss-us" src="../assets/instagramlogo.webp" alt="logo-de-instagram"></a></div></div>
+      <div><a href="https://www.instagram.com/carpintero_lc/" target="_blank"><img class="rrss-us" src="../assets/instagramlogo.webp" alt="logo-de-instagram"></a></div></div>
     </div> 
 
 
@@ -49,6 +72,8 @@
 
 
 
+         <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 </body>
 </html>
