se trabajo con mixin extend y map

--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -44,7 +44,7 @@
               </nav> 
 
 
-              <form class="row g-3 gradient box-contact"> 
+              <form class="row g-3 gradient-extend box-contact"> 
 
                 <div class="col-12">
                     <label for="inputAddress" class="form-label text-contact">Nombre</label>
@@ -74,7 +74,7 @@
                   </div>
                 </div>
                 <div class="col-12">
-                  <button type="submit" class="btn btn-primary">Enviar</button>
+                  <button type="submit" class="btn-1">Enviar</button>
                 </div>
               </form>
             
