--- a/Pages/nuestros-clientes.html
+++ b/Pages/nuestros-clientes.html
@@ -49,7 +49,7 @@
 
 
 
-        <div class="container-fluid bg-dark my-2">
+        <div class="container-fluid bg-dark my-2 gradient">
             <div class="row">
     
                 <div class="col">
