se trabajo en correcciones

--- a/index.html
+++ b/index.html
@@ -62,34 +62,16 @@
       
       <section class="name-2"></section>
 
-      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./assets editados/mesa1.jpeg" class="d-block w-100" alt="mesa-de-centro">
-          </div>
-          <div class="carousel-item">
-            <img src="./assets editados/mueble 1.jpeg" class="d-block w-100" alt="mueble">
-          </div>
-          <div class="carousel-item">
-            <img src="./assets editados/rack1.jpeg" class="d-block w-100" alt="rack">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+      <div class="seccion-central">
+      <div class="cont-index gradient">
+        <div class="item-index"><p>Muebles hogar</p></div>
+        <div class="item-index"><p>Trabajo con metal</p></div>
+        <div class="item-index"><p>Artefactos para entrenar</p></div>
+        <div class="item-index"><p>Personalización de muebles</p></div>
       </div> 
 
 
+    </div>
      
 
 
