--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -37,7 +37,7 @@
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="./nuestros-clientes.html">Nuestros Clientes</a></li>
                   <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
-                  <li><a class="dropdown-item" href="#">Redes Sociales</a></li>
+                  <li><a class="dropdown-item" href="https://www.instagram.com/carpintero_lc/">Instagram</a></li>
                 </ul>
               </li>
             </ul>
@@ -46,9 +46,21 @@
       </nav>
       
 
-    <div class="us gradient"> 
-   <!--    <img src="../assets/us1.jpeg" alt="nosotros"> -->
- </div> 
+      <div class="us-container gradient">
+        <div class="us-item"><img src="../assets/us1.jpeg" alt="nosotros"></div>
+        <div class="us-item"><p class="us-item">Carpintería Lc nace con la idea de cubrir las distintas necesidades de las personas cuyo objetivo es 
+          contar con muebles personalizados a su medidas y de acuerdo a sus gustos. En Carpintería Lc tendrás la posibilidad de solicitar 
+        un modelo que imagines y en Carpintería Lc se encargarán de fabricarlo.</p>
+        <p>Rodrigo Bastias es el fundador de Carpintería Lc, un carpintero santiaguino que 
+          antes de ejercer este oficio fue gimnasta, artista marcial y preparador físico. Esta 
+          experiencia y conocimientos en estas areas le han servido para desarrollar artefactos 
+          de madera enfocados en ser herramientas para el entrenamiento.
+        </p><p>En Carpintería Lc no solo encontraras muebles destinados al hogar, también encontrarás
+          herramientas para entrenar.
+        </p><p>También podrás encontrar muebles fabricados con madera y metal.</p>
+        <p>Puedes personalizar tu pedido obteniendo así un mueble según tus preferencias</p></div> 
+
+      </div>
 
 
     
